Fixing submit button IE bug and copy fixes

--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -1,7 +1,8 @@
 
 fieldset {
-  margin-bottom: 2em;
-  padding-left: 0.2em; }
+  border: 0;
+  margin: 0;
+  padding: 0; }
 
 .btn-holder {
   padding-bottom: 1em;
@@ -20,7 +21,7 @@ textarea {
 
 textarea.full {
   width: 99%;
-  height: 25em; }
+  height: 15em; }
 
 input.default-text {
   color: #999;
@@ -40,6 +41,9 @@ select {
 address {
   margin-bottom: 1em; }
 
+form dl, form dt, form dd {
+  margin: 0;
+  padding: 0; }
 form dt label {
   font-size: 93%;
   font-weight: bold; }
